2009-06-22  Christophe Lyon  <christophe.lyon@st.com>

	ld/testsuite:
	* ld-arm/farcall-mixed-app.s: Add new references to check more
	modes switching.
	* ld-arm/farcall-mixed-lib1.s: Likewise.
	* ld-arm/farcall-mixed-app-v5.d: Update expected result.
	* farcall-mixed-app.d: Likewise.
	* ld-arm/farcall-mixed-lib.d: Likewise.

2009-06-22  Dave Korn  <dave.korn.cygwin@gmail.com>

	* ld-pe/pe-run.exp (proc test_direct_link_dll):  Fix incorrect
	line-wrapping.

2009-06-19  H.J. Lu  <hongjiu.lu@intel.com>

	* ld-i386/i386.exp: Run tlsgd2.

	* ld-i386/tlsgd2.d: New.
	* ld-i386/tlsgd2.s: Likewise.

	* ld-x86-64/tlsgd3.d: Updated.

2009-06-18  Dave Korn  <dave.korn.cygwin@gmail.com>

	* ld-pe/pe-run.exp (proc test_direct_link_dll):  Always pass
	--enable-auto-import to the linker.
	* ld-pe/vers-script-1.d:  Replace '\$' by '_' in all symbol names.
	* ld-pe/vers-script-3.d:  Likewise.
	* ld-pe/vers-script-4.d:  Likewise.
	* ld-pe/vers-script-dll.c:  Likewise.
	* lib/ld-lib.exp (proc is_pecoff_format):  Also return true for
	"*-*-cegcc*" targets.

2009-06-15  H.J. Lu  <hongjiu.lu@intel.com>

	* ld-ifunc/ifunc-9-x86.d: Fix a typo.

2009-06-14  H.J. Lu  <hongjiu.lu@intel.com>

	PR ld/10270
	* ld-ifunc/ifunc-9-x86.d: New.
	* ld-ifunc/ifunc-9-x86.s: Likewise.

2009-06-13  H.J. Lu  <hongjiu.lu@intel.com>

	PR ld/10269
	* ld-ifunc/ifunc-1-local-x86.d: New.
	* ld-ifunc/ifunc-1-local-x86.s: Likewise.
	* ld-ifunc/ifunc-2-local-i386.d: Likewise.
	* ld-ifunc/ifunc-2-local-i386.s: Likewise.
	* ld-ifunc/ifunc-2-local-x86-64.d: Likewise.
	* ld-ifunc/ifunc-2-local-x86-64.s: Likewise.
	* ld-ifunc/ifunc-4-local-x86.d: Likewise.
	* ld-ifunc/ifunc-4-local-x86.s: Likewise.
	* ld-ifunc/ifunc-5-local-i386.s: Likewise.
	* ld-ifunc/ifunc-5-local-x86-64.s: Likewise.
	* ld-ifunc/ifunc-5a-local-i386.d: Likewise.
	* ld-ifunc/ifunc-5a-local-x86-64.d: Likewise.
	* ld-ifunc/ifunc-5b-local-i386.d: Likewise.
	* ld-ifunc/ifunc-5b-local-x86-64.d: Likewise.

2009-06-03  H.J. Lu  <hongjiu.lu@intel.com>
