@@ -32,7 +32,7 @@ if {! [is_elf_format] && ! [is_pecoff_format]} {
 # Weak symbols are broken for non-i386 PE targets.
 if {! [istarget i?86-*-*]} {
     setup_xfail *-*-pe*
-    setup_xfail x86_64-*-mingw*
+    setup_xfail x86_64-*-pe*
 }
 
 # hppa64 and or32 are incredibly broken
